<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/students" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/textPibd42"
            android:inputType="text">
        </EditText>
        <Button
            android:id="@+id/btnReport"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textReportByGroup">
        </Button>
    </LinearLayout>
    <Button
        android:id="@+id/btnAddStudent"
        android:layout_margin="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textAddStudent"
        >
    </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnImport"
            android:layout_marginHorizontal="10dp"
            android:text="@string/textImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnExport"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/textExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>



</LinearLayout>